--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore __pycache__ folders and their contents.
 __pycache__
 
-# Ignore all pdf files
+# Ignore all user manuals for copyright reasons.
+manuals
 *.pdf
 *.PDF
