Removed negative values of voltage
Also changed units from kV to V in the configuration file and removed needless calls to __setattr__ from the voltage and current getter and setter methods in API.

--- a/hvctl/hv.conf
+++ b/hvctl/hv.conf
@@ -2,29 +2,36 @@
 
 [voltage]
 
-max_voltage=-100.0
-# The highest voltage the HV PSU can produce in kV. 
-# For negative polarity devices, the value is negative. 
-# The value is used e.g. for scaling the 12-bit integer used by the 
-# Technix serial protocol for setting the voltage value.
+# Voltage values should be given as non-negative numbers even if the 
+# polarity of the HV device is negative.
 
-voltage_limit=-20.0
-# The maximum voltage for a particular application in kV. 
+max_voltage = 100.0e3
+# The highest voltage the HV PSU can produce in V. 
+# The value is used for scaling the 12-bit integer 
+# used by the Technix serial protocol for setting the 
+# voltage.
+
+voltage_limit = 20.0e3
+# The maximum voltage for a particular application in V. 
 # HVCtl will never set the voltage to a value exceeding this. 
-# For negative polarity PSU the value should be negative.
 
 [current]
 
-max_current=50.0
-# The highest current the HV PSU can produce in mA. 
-# The value is used e.g. for scaling the 12-bit integer used by the 
-# Technix serial protocol for setting the current value.
+max_current = 50.0
+# The highest current the HV PSU can produce in mA.
+# The value is used for scaling the 12-bit integer 
+# used by the Technix serial protocol for setting the 
+# current.
 
-current_limit=5.0
+current_limit = 5.0
 # The maximum current for a particular application in mA.
 # HVCtl will never set the current to a value exceeding this. 
 
 [serial]
+
+# Technix SR100kV-5kW RS232 line specs: 
+# 1 start bit, 8 data bits, 1 stop bit, no parity, full duplex mode, 
+# baud rate 9600.
 
 port = /dev/ttyUSB0
 # The port is the name of the serial device file.
@@ -39,8 +46,6 @@ startbits = 1
 rtscts    = False
 dsrdtr    = False
 xonxoff   = False
-# Technix SR100kV-5kW uses RS232 line specs: 1 start bit, 8 data bits,
-# 1 stop bit, no parity, Full Duplex mode, baud rate 9600.
 
 timeout = None
 # Timeout in seconds. When reading data from the serial port, wait
