Replaced 'HV PSU' with 'HV generator'
Also removed API.run(), since it did nothing and should have been removed earlier.

--- a/hvctl/hv.conf
+++ b/hvctl/hv.conf
@@ -6,7 +6,7 @@
 # polarity of the HV device is negative.
 
 max_voltage = 100.0e3
-# The highest voltage the HV PSU can produce in V.
+# The highest voltage the HV generator can produce in V.
 # The value is used for scaling the 12-bit integer
 # used by the Technix serial protocol for setting the
 # voltage.
@@ -18,7 +18,7 @@ voltage_limit = 20.0e3
 [current]
 
 max_current = 50.0
-# The highest current the HV PSU can produce in mA.
+# The highest current the HV generator can produce in mA.
 # The value is used for scaling the 12-bit integer
 # used by the Technix serial protocol for setting the
 # current.
