Added and documented display.py

--- a/hvctl/default.conf
+++ b/hvctl/default.conf
@@ -11,7 +11,8 @@ max_voltage = 100.0e3
 # used by the Technix serial protocol for setting the
 # voltage.
 
-voltage_limit = 20.0e3
+#voltage_limit = 20.0e3
+voltage_limit = 100.0e3
 # The maximum voltage for a particular application in V.
 # HVCtl will never set the voltage to a value exceeding this.
 
