Separated links to attributes of attributes into two parts in the docs

--- a/hvctl/default.conf
+++ b/hvctl/default.conf
@@ -1,4 +1,4 @@
-# This is the configuration file for HVControl.
+# This is the default configuration file for HVControl.
 
 [voltage]
 
@@ -7,11 +7,10 @@
 
 max_voltage = 100.0e3
 # The highest voltage the HV generator can produce in V.
-# The value is used for scaling the 12-bit integer
+# This value is used for scaling the 12-bit integer
 # used by the Technix serial protocol for setting the
 # voltage.
 
-#voltage_limit = 20.0e3
 voltage_limit = 100.0e3
 # The maximum voltage for a particular application in V.
 # HVCtl will never set the voltage to a value exceeding this.
@@ -20,17 +19,17 @@ voltage_limit = 100.0e3
 
 max_current = 50.0
 # The highest current the HV generator can produce in mA.
-# The value is used for scaling the 12-bit integer
+# This value is used for scaling the 12-bit integer
 # used by the Technix serial protocol for setting the
 # current.
 
-current_limit = 5.0
+current_limit = 50.0
 # The maximum current for a particular application in mA.
 # HVCtl will never set the current to a value exceeding this.
 
 [serial]
 
-# Technix SR100kV-5kW RS232 line specs:
+# RS-232 specifications for the Technix SR100kV-5kW:
 # 1 start bit, 8 data bits, 1 stop bit, no parity, full duplex mode,
 # baud rate 9600.
 
@@ -48,7 +47,7 @@ rtscts    = False
 dsrdtr    = False
 xonxoff   = False
 
-timeout = None
-# Timeout in seconds. When reading data from the serial port, wait
+timeout = 1
+# Timeout in seconds. When data is read from the serial port, wait
 # a maximum of *timeout* seconds. Decimal/float values are allowed.
 # 'None' means forever, '0' is a non-blocking mode.
